[gd_scene load_steps=14 format=3 uid="uid://drp1m2pevdam6"]

[ext_resource type="Script" path="res://melee_skeleton.gd" id="1_k7dtq"]
[ext_resource type="Texture2D" uid="uid://dsywjntr0enx6" path="res://art/SkeletonBowAttack1.png" id="2_dyv8q"]
[ext_resource type="Texture2D" uid="uid://seyxdbtmd85f" path="res://art/SkeletonBowAttack2.png" id="3_t7o6x"]
[ext_resource type="Texture2D" uid="uid://bfdc2oejwsr01" path="res://art/SkeletonBowAttack3.png" id="4_vpj01"]
[ext_resource type="Texture2D" uid="uid://dooel0w04b4oa" path="res://art/SkeletonBowAttack4.png" id="5_8b524"]
[ext_resource type="Texture2D" uid="uid://dgan7gwcuyalo" path="res://art/SkeletonBowAttack5.png" id="6_n10iv"]
[ext_resource type="Texture2D" uid="uid://cyinmhy22uwsn" path="res://art/SkeletonBowIdle1.png" id="7_wq0cg"]
[ext_resource type="Texture2D" uid="uid://f2djj5pwkff" path="res://art/SkeletonBowIdle2.png" id="8_q3jhg"]
[ext_resource type="Texture2D" uid="uid://bto2j2567xxif" path="res://art/SkeletonBowWalk2.png" id="9_43lhe"]
[ext_resource type="Texture2D" uid="uid://nukrd5cc3j1o" path="res://art/SkeletonBowWalk3.png" id="10_h2s1h"]
[ext_resource type="Texture2D" uid="uid://fy1hmivpw3im" path="res://art/SkeletonBowWalk4.png" id="11_f4fi0"]
[ext_resource type="Texture2D" uid="uid://b5xramla1grcg" path="res://art/SkeletonBowWalk5.png" id="12_mgt4l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_h1li2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dyv8q")
}, {
"duration": 1.0,
"texture": ExtResource("3_t7o6x")
}, {
"duration": 1.0,
"texture": ExtResource("4_vpj01")
}, {
"duration": 1.0,
"texture": ExtResource("5_8b524")
}, {
"duration": 1.0,
"texture": ExtResource("6_n10iv")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_wq0cg")
}, {
"duration": 1.0,
"texture": ExtResource("8_q3jhg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_43lhe")
}, {
"duration": 1.0,
"texture": ExtResource("10_h2s1h")
}, {
"duration": 1.0,
"texture": ExtResource("11_f4fi0")
}, {
"duration": 1.0,
"texture": ExtResource("12_mgt4l")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="MeleeSkeleton" type="Area2D" groups=["Enemy", "EnemyOfHero"]]
script = ExtResource("1_k7dtq")

[node name="BodySpriteAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h1li2")
animation = &"walk"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-6, -14, 11, -14, 11, 11, -6, 11)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 15.0
debug_enabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
